--- a/packages/budget/package.json
+++ b/packages/budget/package.json
@@ -62,6 +62,7 @@
     "@babel/node": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^3.0.0",
+    "@hackoregon/dev-server": "workspace:packages/dev-server",
     "@hackoregon/mock-wrapper": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
@@ -104,6 +105,9 @@
     "version-bump-prompt": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
-    "webpack-cli": "^3.2.3"
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-middleware": "^3.6.1",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
