--- a/packages/emergency-response/package.json
+++ b/packages/emergency-response/package.json
@@ -40,6 +40,7 @@
     "express": "^4.14.1",
     "invariant": "^2.2.2",
     "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "ramda": "^0.23.0",
     "react": "^16.8.4",
@@ -65,6 +66,7 @@
     "@babel/node": "^7.0.0",
     "@babel/register": "^7.0.0",
     "@hackoregon/civic-babel-presets": "^3.0.0",
+    "@hackoregon/dev-server": "workspace:packages/dev-server",
     "@hackoregon/mock-wrapper": "^3.0.0",
     "@hackoregon/webpack-common": "^3.0.0",
     "autoprefixer": "^9.4.10",
@@ -116,6 +118,8 @@
     "version-bump-prompt": "^3.1.0",
     "webpack": "^4.29.6",
     "webpack-blocks": "^2.0.0-rc",
-    "webpack-cli": "^3.2.3"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-middleware": "^3.6.1",
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
