--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,6 @@
 # Use node-modules instead of PnP
-nodeLinker: node-modules
+# nodeLinker: node-modules
+pnpMode: loose
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
