--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "eslint-watch": "^5.0.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^1.3.1",
+    "husky": "^4.2.5",
     "hygen": "^4.0.7",
     "istanbul": "^0.4.4",
     "jest": "^24.5.0",
@@ -128,7 +128,7 @@
     "node-notifier": "^5.0.2",
     "npm-run-all": "^4.0.2",
     "postcss-loader": "^3.0.0",
-    "prettier": "1.16.4",
+    "prettier": "^2.0.5",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "redux-immutable-state-invariant": "^1.2.4",
